# Logic-TriOxide

./: Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: example01.rs  example02.rs  example03.rs  test01.rs
src/: logic.rs  main.rs
src/logic/: logic.rs  mod.rs
